Fixed notification popup overlapping on TopBar
Now the notification popup and TopBar do not overlap on each other.

Bug: T333062

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -456,7 +456,7 @@ $text-color: #b6e2fa;
 
 #notification-wrapper {
 	position: fixed;
-	top: 2%;
+	top: 4rem;
 	right: 1%;
 	min-width: 250px;
 	z-index: 50;
